force-app/main/default/objects/Location_Visit__c/Location_Visit__c.object-meta.xml
<CustomObject>
    <description>Object used to log Site inspections (for existing customers) and Site visits (for portential Customers)</description>
    <label>Location Visit</label>
    <nameField>
        <label>Location Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>