force-app/main/default/objects/Location_Visit__c/fields/Access_Information__c.field-meta.xml
<CustomField>
    <fullName>Access_Information__c</fullName>
    <label>Access Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>