force-app/main/default/objects/Location_Visit__c/fields/Asset_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Asset_Evaluation__c</fullName>
    <label>Asset Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>