force-app/main/default/objects/Location_Visit__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <label>Assets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>