force-app/main/default/objects/Location_Visit__c/fields/Assets_Additional__c.field-meta.xml
<CustomField>
    <fullName>Assets_Additional__c</fullName>
    <label>Assets (Additional)</label>
    <type>TextArea</type>
</CustomField>