force-app/main/default/objects/Location_Visit__c/fields/Contact_Visit__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Visit</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Location Visits</relationshipLabel>
    <relationshipName>Location_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>