force-app/main/default/objects/Location_Visit__c/fields/Demand_type__c.field-meta.xml
<CustomField>
    <fullName>Demand_type__c</fullName>
    <label>Demand Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>