force-app/main/default/objects/Location_Visit__c/fields/Email_Contact_Visit__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact_Visit__c</fullName>
    <formula>Contact_Visit__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Contact Visit</label>
    <type>Text</type>
</CustomField>