force-app/main/default/objects/Location_Visit__c/fields/Estimation_Intervention_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Intervention_Time__c</fullName>
    <label>Estimation Intervention Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>