force-app/main/default/objects/Location_Visit__c/fields/Execution_Deadline_Request__c.field-meta.xml
<CustomField>
    <fullName>Execution_Deadline_Request__c</fullName>
    <label>Execution Deadline Request</label>
    <type>Date</type>
</CustomField>