force-app/main/default/objects/Location_Visit__c/fields/Extra_Opportunity_Information__c.field-meta.xml
<CustomField>
    <fullName>Extra_Opportunity_Information__c</fullName>
    <label>Extra Opportunity Information</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>