force-app/main/default/objects/Location_Visit__c/fields/Fixed_date_Already_planned__c.field-meta.xml
<CustomField>
    <fullName>Fixed_date_Already_planned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this visit on a fixed date or is the date already planned?</inlineHelpText>
    <label>Fixed date / Already planned</label>
    <type>Checkbox</type>
</CustomField>