force-app/main/default/objects/Location_Visit__c/fields/Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Type__c</fullName>
    <label>Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>