force-app/main/default/objects/Location_Visit__c/fields/Location_Passport_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Passport_Status__c</fullName>
    <label>Location Passport Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>