force-app/main/default/objects/Location_Visit__c/fields/Location_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Visit_Type__c</fullName>
    <label>Location Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract opportunity</fullName>
            </value>
            <value>
                <fullName>Additional work opportunity</fullName>
            </value>
            <value>
                <fullName>Baseline measurement</fullName>
            </value>
            <value>
                <fullName>Kick-off</fullName>
            </value>
            <value>
                <fullName>Quality inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>