force-app/main/default/objects/Location_Visit__c/fields/Machines_Required__c.field-meta.xml
<CustomField>
    <fullName>Machines_Required__c</fullName>
    <label>Machines Required</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>