force-app/main/default/objects/Location_Visit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity for which this site visit was done</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Location Visits</relationshipLabel>
    <relationshipName>Location_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>