force-app/main/default/objects/Location_Visit__c/fields/Phone_Contact_Visit__c.field-meta.xml
<CustomField>
    <fullName>Phone_Contact_Visit__c</fullName>
    <formula>&quot;Mobile: &quot;&amp; Contact_Visit__r.MobilePhone &amp;&quot; Phone: &quot; &amp; Contact_Visit__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Contact Visit</label>
    <type>Text</type>
</CustomField>