force-app/main/default/objects/Location_Visit__c/fields/Priority_Request__c.field-meta.xml
<CustomField>
    <fullName>Priority_Request__c</fullName>
    <label>Priority Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>