force-app/main/default/objects/Location_Visit__c/fields/Remarks_Demand_type__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Demand_type__c</fullName>
    <label>Remarks Demand Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>