force-app/main/default/objects/Location_Visit__c/fields/Safety_Information__c.field-meta.xml
<CustomField>
    <fullName>Safety_Information__c</fullName>
    <label>Safety Information</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>