force-app/main/default/objects/Location_Visit__c/fields/Safety_Instruction_Status__c.field-meta.xml
<CustomField>
    <fullName>Safety_Instruction_Status__c</fullName>
    <label>Safety Instruction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checked</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>