force-app/main/default/objects/Location_Visit__c/fields/Scoring__c.field-meta.xml
<CustomField>
    <fullName>Scoring__c</fullName>
    <inlineHelpText>Needs to be a number between 0 and 10</inlineHelpText>
    <label>Scoring</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>