force-app/main/default/objects/Location_Visit__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The service appointment the inspection is linked to</description>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Location Visits</relationshipLabel>
    <relationshipName>Location_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>