force-app/main/default/objects/Location_Visit__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Location Visits (Service Contract)</relationshipLabel>
    <relationshipName>Location_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>