force-app/main/default/objects/Location_Visit__c/fields/Service_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Status__c</fullName>
    <formula>TEXT( Service_Contract__r.Status_custom__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Contract Status</label>
    <type>Text</type>
</CustomField>