force-app/main/default/objects/Location_Visit__c/fields/Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Package</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Service Package</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Location Visits</relationshipLabel>
    <relationshipName>Location_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>