force-app/main/default/objects/Location_Visit__c/fields/Service_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Package_Name__c</fullName>
    <label>Service Package Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_package_type</valueSetName>
    </valueSet>
</CustomField>