force-app/main/default/objects/Location_Visit__c/fields/Site_Boundaries_Info__c.field-meta.xml
<CustomField>
    <fullName>Site_Boundaries_Info__c</fullName>
    <label>Site Boundaries Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>