force-app/main/default/objects/Location_Visit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Inspection = with an existing customer
Site visit = visit for new oppty</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>