force-app/main/default/objects/Location_Visit__c/fields/Visit_Address__c.field-meta.xml
<CustomField>
    <fullName>Visit_Address__c</fullName>
    <label>Visit Address</label>
    <type>Address</type>
</CustomField>