force-app/main/default/objects/Location_Visit__c/fields/Visit_Date_date_only__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date_date_only__c</fullName>
    <formula>DATEVALUE( Visit_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Date (date only)</label>
    <type>Date</type>
</CustomField>