force-app/main/default/objects/Location_Visit__c/fields/Visitor_Internal__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Internal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitor (Internal)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Location_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>