force-app/main/default/objects/Location_Visit__c/validationRules/Internal_Visitor_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Visitor_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(ISPICKVAL(Location_Visit_Type__c, &quot;Contract opportunity&quot;),
       ISPICKVAL(Location_Visit_Type__c, &quot;Additional work opportunity&quot;)
       ),
    ISBLANK(Visitor_Internal__c)
    )</errorConditionFormula>
    <errorMessage>Please fill in the Visitor(Internal) field for an opportunity visit.</errorMessage>
</ValidationRule>