force-app/main/default/objects/Location_Visit__c/validationRules/Planned_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Planned_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Fixed_date_Already_planned__c = TRUE,
    ISBLANK(Visit_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Visit_Date__c</errorDisplayField>
    <errorMessage>Please enter the date of the planned visit.</errorMessage>
</ValidationRule>